--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             font-family: 'Baloo Bhai 2', cursive;
             padding: 0px;
             margin: 0px;
-            background: url('img/gym2.jpg');
+            background: url('img/gym.jpg');
             color: white;
         }
 
